<?xml version="1.0"?>
<package format="2">
  <name>example_package</name>
  <version>0.1.0</version>
  <description>An example ROS2 package to demonstrate the reusable CMakeLists.txt.</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>

</package>
